Resolves: tdf#103166 if the menu is empty, add a disabled placeholder

i.e. <No Selection Possible>

otherwise it looks like a bug of some kind.

Change-Id: Ib35146698c31fd3f3d51915ea460eab1dde39d26